--- a/widget.html
+++ b/widget.html
@@ -79,11 +79,11 @@
       </p>
     </script>
     <script>
-      var R_BASE_URL = "https://rushout.co/"
+      var R_BASE_URL = "https://rushout.co/";
       var R_TEMPLATE = Handlebars.compile($("#rushout-template").html());
-      var R_SLUG = 'do-you-like-that-song'
-      var R_URL = R_BASE_URL + R_SLUG + "/events"
-      var R_URL_JSON = R_URL + ".json"
+      var R_SLUG = 'do-you-like-that-song';
+      var R_URL = R_BASE_URL + R_SLUG + "/events";
+      var R_URL_JSON = R_URL + ".json";
 
       $(document).ready(function(){
         $.getJSON(R_URL_JSON, function(result){
