--- a/widget.html
+++ b/widget.html
@@ -66,7 +66,7 @@
     <script id="rushout-template" type="text/x-handlebars-template">
       <div class="r-events">
         {{#each events}}
-          <a href={{../R_URL}}/{{slug}} class="r-event">
+          <a href={{../R_URL}}/{{slug}} target="_blank" class="r-event">
             <div class="r-image">
               <img src={{image.thumbnail_512w.url}}>
             </div>
