--- a/widget.html
+++ b/widget.html
@@ -72,7 +72,7 @@
             </div>
             <div class="r-text">
               <h1 class="r-title">{{title}}</h1>
-              <p>{{keywords}}</p>
+              <p>{{short_description}}</p>
             </div>
           </a>
         {{/each}}
